test: Create local address

--- a/db.json5
+++ b/db.json5
@@ -1,64 +1,1 @@
-{
-    addresses: [],
-    'address-fields': [
-        {
-            id: 'local',
-            street: {
-                label: 'Street',
-                requirement: 'MANDATORY',
-                maxLength: 81
-            },
-            postalCode: {
-                label: 'Postal Code',
-                requirement: 'MANDATORY',
-                maxLength: 10
-            },
-            townName: {
-                label: 'City',
-                requirement: 'MANDATORY',
-                maxLength: 51
-            },
-            country: {
-                label: 'Country',
-                requirement: 'OPTIONAL',
-                disabled: true,
-                value: 'AT'
-            }
-        },
-        {
-            id: 'international',
-            buildingName: {
-                label: 'Building Name',
-                requirement: 'OPTIONAL'
-            },
-            street: {
-                label: 'Street',
-                requirement: 'MANDATORY',
-                maxLength: 85
-            },
-            districtName: {
-                label: 'District',
-                requirement: 'OPTIONAL'
-            },
-            postalCode: {
-                label: 'Postal Code',
-                requirement: 'OPTIONAL',
-                maxLength: 10
-            },
-            townName: {
-                label: 'City',
-                requirement: 'MANDATORY',
-                maxLength: 61
-            },
-            regionName: {
-                label: 'Region',
-                requirement: 'OPTIONAL'
-            },
-            country: {
-                label: 'Country',
-                requirement: 'MANDATORY',
-                maxLength: 2
-            }
-        }
-    ]
-}
+{addresses:[{id:'6968',street:'x',postalCode:'x',townName:'x'},{id:'6396',buildingName:'x',street:'x',districtName:'x',postalCode:'x',townName:'x',regionName:'x',country:'IT'},{id:'6ea2',street:'x',postalCode:'x',townName:'x'},{id:'4009',street:'x',postalCode:'x',townName:'x'},{id:'a5e4',buildingName:'x',street:'x',districtName:'x',postalCode:'x',townName:'x',regionName:'x',country:'BR'},{id:'d80a',street:'c',postalCode:'c',townName:'c'},{id:'7c87',street:'c',postalCode:'c',townName:'c'},{id:'dcad',street:'c',postalCode:'c',townName:'c'}],'address-fields':[{id:'local',street:{label:'Street',requirement:'MANDATORY',maxLength:81},postalCode:{label:'Postal Code',requirement:'MANDATORY',maxLength:10},townName:{label:'City',requirement:'MANDATORY',maxLength:51},country:{label:'Country',requirement:'OPTIONAL',disabled:true,value:'AT'}},{id:'international',buildingName:{label:'Building Name',requirement:'OPTIONAL'},street:{label:'Street',requirement:'MANDATORY',maxLength:85},districtName:{label:'District',requirement:'OPTIONAL'},postalCode:{label:'Postal Code',requirement:'OPTIONAL',maxLength:10},townName:{label:'City',requirement:'MANDATORY',maxLength:61},regionName:{label:'Region',requirement:'OPTIONAL'},country:{label:'Country',requirement:'MANDATORY',maxLength:2}}]}
